--- a/Belleview/index.html
+++ b/Belleview/index.html
@@ -20,7 +20,7 @@
 
             <div class="logo">
 
-                <div class="logo-icon">BD</div>
+                <div class="logo-icon"><img src="tooth.jpg" alt="logo" class="logo-icon"></div>
 
                 <div class="logo-text">
 
@@ -124,10 +124,12 @@
 
             <div class="hero-buttons">
 
+            
                 <button class="btn btn-primary" onclick="scrollToSection('patient-education')">Patient Resources</button>
 
                 <button class="btn btn-secondary" onclick="scrollToSection('professional-education')">Professional Education</button>
 
+                <button class="btn btn-tertiary">Book a Session</button>
             </div>
 
         </div>
